# rn4871-driver

./: .gitignore  CMakeLists.txt  Doxyfile.in  License.txt  Readme.md  Todo.md  gatt.h  logs.c  logs.h  rn4871.c  rn4871.h  rn4871_api.h  rn4871_core.c  rn4871_defs.h  rn4871_logger.c  rn4871_logger.h  utils.c  utils.h  virtual_module.c  virtual_module.h
Core/: CMakeLists.txt
Core/inc/: rn4871_api.h  rn4871_core.h  rn4871_defs.h  rn4871_logger.h  virtual_module.h
Core/src/: rn4871_core.c  rn4871_defs.c  rn4871_logger.c  virtual_module.c
Test/: CMakeLists.txt  main_test.c  mock_rn4871.c  mock_rn4871.h  test_rn4871.c  test_rn4871.h  test_virtual_module.c  test_virtual_module.h
Test/Driver_Rn4871/: CMakeLists.txt  main_test.c  mock_rn4871.c  test_rn4871.c  test_rn4871.h
Test/Integration/: CMakeLists.txt  main_test.c  test_integration.c  test_integration.h
Test/Virtual_Module/: CMakeLists.txt  main_test.c  mock_rn4871.c  mock_rn4871.h  test_virtual_module.c  test_virtual_module.h
rn4871/: CMakeLists.txt
rn4871/include/: rn4871_api.h  virtual_module.h
rn4871/src/: rn4871_core.c  rn4871_core.h  rn4871_defs.c  rn4871_defs.h  rn4871_logger.h  rn4871_types.h
rn4871/test/: CMakeLists.txt
rn4871/test/Virtual_Module/: CMakeLists.txt  mock_rn4871.c  mock_rn4871.h  test_virtual_module.c
rn4871/test/integration_test/: CMakeLists.txt  test_integration.c
rn4871/test/interface_test/: CMakeLists.txt  test_integration.c  test_integration.h
rn4871/test/unit_test/: CMakeLists.txt  main_test.c  mock_rn4871.c  mock_rn4871.h  test_rn4871.c  test_rn4871.h
