cmake_minimum_required(VERSION 3.20)
project(RN4871-driver)

set(CMAKE_C_STANDARD 99)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(LOGS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/logs)
set(RN4871_CORE_INC "${CMAKE_CURRENT_SOURCE_DIR}/Core/inc")

if(CMAKE_BUILD_TYPE STREQUAL Release)
	add_subdirectory(Core)
elseif(CMAKE_BUILD_TYPE STREQUAL Test)
	set(RN4871_UTEST TRUE)
    set(CMAKE_C_EXTENSIONS ON)
    include(CTest)
    include(Test/cmake/cmocka.cmake)
    add_subdirectory(Core)
	add_subdirectory(Test)
else()
	message(ERROR " Specify CMAKE_BUILD_TYPE Release or Test")
endif()